--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,10 @@
       color: #ddd;
       text-align: center;
   }
+  .resumen {
+    color: #ddd;
+    text-align: center;
+  }
 
   .contacto {
       color: #ddd;
